# HyperSave

./: .dockerignore  .gitignore  Dockerfile  HyperSaveBot.session  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1b43805b3595_add_session_string_in_user.py
hypersave/: HyperSaveBot.session  bot.py  settings.py
hypersave/database/: base.py  database.py  models.py  user_repository.py
hypersave/managers/: download_manager.py  upload_manager.py  user_manager.py  user_session_manager.py
hypersave/models/: download_task.py  media_info.py  upload_task.py  user_client.py
hypersave/plugins/: custom_filters.py  download_handler.py  login.py  start.py  status_handler.py
hypersave/utils/: clear_folders.py  create_thumb.py  directory_helper.py  media_processor.py  message_utils.py
