[project]
name = "hypersave"
version = "0.1.0"
description = "Bot to save restricted content from telegram channels and groups"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kurigram==2.1.39",
    "loguru==0.7.2",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "uvloop==0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["/hypersave"]
